@@ -7,7 +7,7 @@ public final class Article implements Searchable {
     private final String text;
 
     public Article(String title, String text) {
-        if (title == null || title.trim().isEmpty()) {
+        if (title == null || title.isBlank()) {
             throw new IllegalArgumentException("Название статьи не может быть пустым");
         }
         if (text == null || text.trim().isEmpty()) {
